--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^9.0.8",
     "date-fns": "^3.6.0",
     "next": "14.1.2",
+    "nodemailer": "^6.9.13",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-number-format": "^5.3.4",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
