--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^9.0.8",
     "date-fns": "^3.6.0",
+    "moment": "^2.30.1",
     "next": "14.1.2",
     "nodemailer": "^6.9.13",
     "prettier": "^3.2.5",
